--- a/page1.html
+++ b/page1.html
@@ -110,8 +110,10 @@
   </script>
 </head>
 <body>
-  <div class="search">
+
+    <div class="search">
       <input type="text" placeholder="Search...">
+    </div>
   <H1>Page 1</h1>
   </div></body>
 </html>
